# FastAPI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  output.mov  pyproject.toml  render.yaml
app/: config.py  main.py
app/api/: service.py
app/api/adapters/: azure_service.py  gcs_service.py  j_service.py  lang_service.py  openjourney_service.py  s3_service.py  stability_service.py
app/api/db/: Abai.txt
app/api/repository/: GCS.py  images.py  repository.py
app/api/router/: router_audio.py  router_img.py  router_post_img.py  router_question.py  router_text.py
app/auth/: service.py
app/auth/adapters/: jwt_service.py  s3_service.py
app/auth/repository/: repository.py
app/auth/router/: dependencies.py  router_CRUD_avatar.py  router_CRUD_fav.py  router_CRUD_user.py  router_get_my_account.py
app/post/: service.py
app/post/repository/: repository.py
app/post/router/: router_create_post.py  router_get_post.py  router_patch_post.py
app/posts/: service.py
app/posts/adapters/: hereAPI_service.py  here_service.py  s3_service.py
app/posts/repository/: repository.py
app/posts/router/: router_CRUD_comment.py  router_CRUD_file.py  router_CRUD_post.py  router_create_comment.py  router_create_post.py  router_delete_comment.py  router_delete_file.py  router_delete_post.py  router_get_post.py  router_patch_post.py  router_update_comment.py  router_upload_file.py
cert/: gcs-key.json
deploy/dockerfiles/: Dockerfile
