[tool.poetry]
name = "fastapi-application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
pydantic= {extras = ["email"], version = "^1.10.4"}
fastapi = "^0.95.2"
uvicorn= {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.6"
pymongo = {extras = ["srv"], version = "^4.3.3"}
orjson = "^3.9.1"
requests = "^2.31.0"
boto3 = "^1.26.153"
botocore = "^1.29.153"
s3transfer = "^0.6.1"
distance = "^0.1.3"
geopy = "^2.3.0"
stability-sdk = "^0.8.1"
matplotlib = "^3.7.1"
ipython = "^8.14.0"
opencv-python = "^4.7.0.72"
numpy = "^1.25.0"
glob2 = "^0.7"
opencv-contrib-python = "^4.7.0.72"
imageio = "^2.31.1"
opencv-contrib-python-headless = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.7"
ruff = "^0.0.271"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
