[tool.poetry]
name = "fastapi-application"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
appnope = "^0.1.2"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
pydantic= {extras = ["email"], version = "^1.10.4"}
fastapi = "^0.95.2"
uvicorn= {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"
pymongo = "3.11"
orjson = "^3.9.1"
requests = "^2.31.0"
boto3 = "^1.26.153"
botocore = "^1.29.153"
s3transfer = "^0.6.1"
distance = "^0.1.3"
geopy = "^2.3.0"
stability-sdk = "^0.8.1"
matplotlib = "^3.7.1"
ipython = "^8.14.0"
opencv-python = "^4.7.0.72"
numpy = "^1.25.0"
glob2 = "^0.7"
imageio = "^2.31.1"
google-cloud-storage = "^2.9.0"
ffmpeg = "^1.4"
imageio-ffmpeg = "^0.4.8"
replicate = "^0.8.3"
temp = "^2020.7.2"
moviepy = "^1.0.3"
python-dotenv = "^1.0.0"
uuid = "^1.30"
python-io = "^0.3"
pybase64 = "^1.2.3"
pillow = "^10.0.0"
langchain = "^0.0.231"
openai = "^0.27.8"
pip = "^23.1.2"
install = "^1.3.5"
google-search-results = "^2.4.2"
wolframalpha = "^5.0.0"
google-cloud-translate = "^3.11.2"
googletrans = "^3.0.0"
google-cloud-speech = "^2.21.0"

[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.7"
ruff = "^0.0.271"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
